Mit Colab erstellt

--- a/week2_files/Basic-MT_week2_files/tiktoken_example.ipynb
+++ b/week2_files/Basic-MT_week2_files/tiktoken_example.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tEuO_4aOh-18",
-        "outputId": "1ed1a175-3bbd-4ba8-dcc7-fc9d9c990c5c"
+        "outputId": "470dd0d3-f4ac-416e-e49a-a7863086a8ab"
       },
       "outputs": [
         {
@@ -38,7 +38,7 @@
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests>=2.26.0->tiktoken) (2.3.0)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests>=2.26.0->tiktoken) (2025.1.31)\n",
             "Downloading tiktoken-0.9.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.2 MB)\n",
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/1.2 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.6/1.2 MB\u001b[0m \u001b[31m16.1 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m19.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m12.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: tiktoken\n",
             "Successfully installed tiktoken-0.9.0\n"
           ]
@@ -61,9 +61,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f71NH-eciL4C",
-        "outputId": "ea9cba36-ca6b-4c97-8e1b-4566028e035e"
+        "outputId": "7317f3a7-e660-4ae4-f6ae-899fbcc0ac63"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,9 +104,20 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 2
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "[15339, 1917, 264, 70540, 33746]\n",
+        "\n",
+        "--> hello world a aaaaaaaa aaa"
+      ],
+      "metadata": {
+        "id": "q63a0D_ZDtyZ"
+      }
     },
     {
       "cell_type": "code",
@@ -120,15 +131,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y3PbYJ_FifDP",
-        "outputId": "fdff8b29-57d5-4d7c-8b50-ae1e3430420d"
+        "outputId": "c6bf97bf-91e6-4ee2-aa6d-4d244f8f201a"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[1;30;43mStreaming output truncated to the last 5000 lines.\u001b[0m\n",
+            "\u001b[1;30;43mDie letzten 5000 Zeilen der Streamingausgabe wurden abgeschnitten.\u001b[0m\n",
             "The current most common pair is b' ' + b'en'\n",
             "So we made b' en' our 324th token\n",
             "Now the first fifty words in our training data look like:\n",
@@ -5190,9 +5201,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UcxWO5XwjCjH",
-        "outputId": "11c8be8d-76d0-4de3-e42a-2b56c0c69b75"
+        "outputId": "7ba6b97b-cc6c-4b00-cb7b-2de97458384f"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -8376,9 +8387,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VwdpDuzigY83",
-        "outputId": "d6bb8359-6dda-4b9a-9eac-bdf8c6b3a6fa"
+        "outputId": "73e59f1f-4ae3-483b-c82d-540b28b4fdaf"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -8457,9 +8468,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "strvv1GXd5lA",
-        "outputId": "7f1942e7-d22c-46a4-b705-5b5e8c105502"
+        "outputId": "9deb8ccf-933a-4fd4-81c0-27a7d8d822d4"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -8508,7 +8519,7 @@
       "metadata": {
         "id": "PENjLtNkdurH"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -8521,9 +8532,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l8_5gXfLdvhv",
-        "outputId": "2c30a1f5-7da2-41d9-8b15-fd3de085ae11"
+        "outputId": "bda29bd6-7de4-425c-b83e-da748dc82d6a"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -8561,9 +8572,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_XBRjjlId0Mn",
-        "outputId": "878933a0-a358-44dd-ca7f-4b789edae293"
+        "outputId": "cb6c8389-7310-4f41-d454-9cf5e1f63f60"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
