Mit Colab erstellt

--- a/week2_files/Basic-MT_week2_files/tiktoken_example.ipynb
+++ b/week2_files/Basic-MT_week2_files/tiktoken_example.ipynb
@@ -8497,6 +8497,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "NB: b... binary"
+      ],
+      "metadata": {
+        "id": "rfPt6NzlHFI_"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import tiktoken\n",
