Mit Colab erstellt

--- a/week2_files/Basic-MT_week2_files/preprocessing_bicleaner_BPE_MTMA2025s_v2.ipynb
+++ b/week2_files/Basic-MT_week2_files/preprocessing_bicleaner_BPE_MTMA2025s_v2.ipynb
@@ -48,7 +48,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "txAnDpS2TBzI",
-        "outputId": "2e7c33b9-c302-4a9a-c523-e8561446fe9f"
+        "outputId": "284cc00c-e683-4b33-80d3-9c8528b3dcd8"
       },
       "outputs": [
         {
@@ -72,7 +72,7 @@
             "Get:3 http://archive.ubuntu.com/ubuntu jammy/main amd64 hunspell-en-us all 1:2020.12.07-2 [280 kB]\n",
             "Get:4 http://archive.ubuntu.com/ubuntu jammy/main amd64 libhunspell-1.7-0 amd64 1.7.0-4build1 [175 kB]\n",
             "Get:5 http://archive.ubuntu.com/ubuntu jammy/main amd64 libhunspell-dev amd64 1.7.0-4build1 [241 kB]\n",
-            "Fetched 896 kB in 0s (2,014 kB/s)\n",
+            "Fetched 896 kB in 0s (2,453 kB/s)\n",
             "Preconfiguring packages ...\n",
             "Selecting previously unselected package libtext-iconv-perl.\n",
             "(Reading database ... 125044 files and directories currently installed.)\n",
@@ -142,7 +142,7 @@
             "Need to get 286 kB of archives.\n",
             "After this operation, 1,176 kB of additional disk space will be used.\n",
             "Get:1 http://archive.ubuntu.com/ubuntu jammy/main amd64 hunspell-de-de all 20161207-9 [286 kB]\n",
-            "Fetched 286 kB in 0s (1,129 kB/s)\n",
+            "Fetched 286 kB in 0s (1,179 kB/s)\n",
             "Selecting previously unselected package hunspell-de-de.\n",
             "(Reading database ... 125155 files and directories currently installed.)\n",
             "Preparing to unpack .../hunspell-de-de_20161207-9_all.deb ...\n",
@@ -154,7 +154,7 @@
             "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Building wheels for collected packages: hunspell\n",
             "  Building wheel for hunspell (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for hunspell: filename=hunspell-0.5.5-cp311-cp311-linux_x86_64.whl size=66311 sha256=a462628a5a41a607ccd00a678042dec1d3668b9372771b564199f3ff0e8e8e5d\n",
+            "  Created wheel for hunspell: filename=hunspell-0.5.5-cp311-cp311-linux_x86_64.whl size=66310 sha256=485cac7160692e8006aebcc303dd7a91df10bb28e0e1dbaf38c3b0784b39c62e\n",
             "  Stored in directory: /root/.cache/pip/wheels/0b/41/b3/14ebfe8dfb3116e3f1ab55ff0db766d1ef033b6842ccc67e24\n",
             "Successfully built hunspell\n",
             "Installing collected packages: hunspell\n",
@@ -168,17 +168,8 @@
         "!apt-get install hunspell-en-us\n",
         "# hunspell-en-med ??\n",
         "!apt-get install hunspell-de-de\n",
-        "!pip install hunspell\n"
+        "!pip install hunspell"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "bDsB83nVMP0g"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -188,7 +179,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l0tT7uz7N37c",
-        "outputId": "eaccec1b-9774-425b-c4e1-20359f9df025"
+        "outputId": "a97f4aca-3341-49e7-a0d8-bcc5b694afbe"
       },
       "outputs": [
         {
@@ -196,15 +187,15 @@
           "name": "stdout",
           "text": [
             "Collecting https://github.com/kpu/kenlm/archive/master.zip\n",
-            "  Downloading https://github.com/kpu/kenlm/archive/master.zip\n",
-            "\u001b[2K     \u001b[32m|\u001b[0m \u001b[32m553.6 kB\u001b[0m \u001b[31m4.2 MB/s\u001b[0m \u001b[33m0:00:00\u001b[0m\n",
+            "  Downloading https://github.com/kpu/kenlm/archive/master.zip (553 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m553.6/553.6 kB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
             "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
             "Building wheels for collected packages: kenlm\n",
             "  Building wheel for kenlm (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for kenlm: filename=kenlm-0.2.0-cp311-cp311-linux_x86_64.whl size=3186999 sha256=5979438054ffd8be09d3b83cbb2925408bfc42c6836731b6183b21c54a29f206\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-9c86ctwz/wheels/4e/ca/6a/e5da175b1396483f6f410cdb4cfe8bc8fa5e12088e91d60413\n",
+            "  Created wheel for kenlm: filename=kenlm-0.2.0-cp311-cp311-linux_x86_64.whl size=3186965 sha256=32fd4452d88b0d492c8ec739c5ca2f2e5fd14977e1416e8440fe75b3fbb9f244\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-f4r23j17/wheels/4e/ca/6a/e5da175b1396483f6f410cdb4cfe8bc8fa5e12088e91d60413\n",
             "Successfully built kenlm\n",
             "Installing collected packages: kenlm\n",
             "Successfully installed kenlm-0.2.0\n"
@@ -220,16 +211,16 @@
       "cell_type": "code",
       "source": [
         "!pip list > requirements.txt\n",
-        "!cat requirements.txt"
+        "!cat requirements.txt   # to show versions of all libraries"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tOCvx9Csn2f5",
-        "outputId": "53598d7f-c55c-4a9e-ba35-cdd71bb3721f"
+        "outputId": "f2d1db35-72b3-4c55-84ca-c27e195b776e"
       },
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,7 +255,6 @@
             "backcall                           0.2.0\n",
             "beautifulsoup4                     4.13.3\n",
             "betterproto                        2.0.0b6\n",
-            "bicleaner-hardrules                2.8.0\n",
             "bigframes                          1.38.0\n",
             "bigquery-magics                    0.8.0\n",
             "bleach                             6.2.0\n",
@@ -350,9 +340,6 @@
             "fastjsonschema                     2.21.1\n",
             "fastprogress                       1.0.3\n",
             "fastrlock                          0.8.3\n",
-            "fastspell                          0.8.0\n",
-            "fastspell-dictionaries             3.0\n",
-            "fasttext                           0.9.2\n",
             "filelock                           3.17.0\n",
             "firebase-admin                     6.6.0\n",
             "Flask                              3.1.0\n",
@@ -645,7 +632,6 @@
             "pyarrow                            18.1.0\n",
             "pyasn1                             0.6.1\n",
             "pyasn1_modules                     0.4.1\n",
-            "pybind11                           2.13.6\n",
             "pycocotools                        2.0.8\n",
             "pycparser                          2.22\n",
             "pydantic                           2.10.6\n",
@@ -707,7 +693,6 @@
             "rpds-py                            0.23.1\n",
             "rpy2                               3.5.17\n",
             "rsa                                4.9\n",
-            "sacremoses                         0.0.53\n",
             "safetensors                        0.5.3\n",
             "scikit-image                       0.25.2\n",
             "scikit-learn                       1.6.1\n",
@@ -788,7 +773,6 @@
             "tinycss2                           1.4.0\n",
             "tokenizers                         0.21.1\n",
             "toml                               0.10.2\n",
-            "toolwrapper                        2.1.0\n",
             "toolz                              0.12.1\n",
             "torch                              2.6.0+cu124\n",
             "torchaudio                         2.6.0+cu124\n",
@@ -849,13 +833,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "source": [
+        "#clone repo from Github and navigate to correct working directory\n",
+        "!git clone https://github.com/fubotz/BMT_2025S\n",
+        "%cd BMT_2025S/week2_files/Basic-MT_week2_files"
+      ],
+      "metadata": {
+        "id": "_k9e03SwSNYC",
+        "outputId": "39329620-8460-41b1-a43d-dcff35c9a845",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: destination path 'BMT_2025S' already exists and is not an empty directory.\n",
+            "/content/BMT_2025S/week2_files/Basic-MT_week2_files\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hcMRjnkjPQ3C",
-        "outputId": "44b91886-ba2c-460b-b5fa-d586cfb2dc10"
+        "outputId": "e108317f-8178-411e-afc1-104302dc38b2"
       },
       "outputs": [
         {
@@ -876,19 +886,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "id": "4gbBB_AKQeyO"
       },
       "outputs": [],
       "source": [
         "#bicleanaer requires parallel data into the same file with columns en-de\n",
-        "!paste  dev.en-de.en dev.en-de.de > dev.en-de"
+        "!paste dev.en-de.en dev.en-de.de > dev.en-de"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -931,7 +941,7 @@
         "id": "KmsuSkv8deFa",
         "outputId": "031ac5d3-775a-4cc7-f196-8978b9e3fedf"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -975,7 +985,7 @@
         "id": "JhgrF-QnejwS",
         "outputId": "f4ab95ea-5669-487d-ca3e-5809e625c138"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1033,7 +1043,7 @@
         "id": "JX1CGcMjSnb6",
         "outputId": "4a2adcc7-1cd7-4b71-fb64-1e62e2fa4e26"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1135,7 +1145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1176,7 +1186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1209,7 +1219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "kfn6dQqlT9_g"
       },
@@ -1227,12 +1237,12 @@
       "metadata": {
         "id": "oxZIfEAdgs5S"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1258,7 +1268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1340,7 +1350,7 @@
         "id": "Drg37FJdi9HX",
         "outputId": "11fba368-d215-4822-f859-0b1e8aea529d"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1386,7 +1396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "YvsQZcpjWiNH"
       },
@@ -1399,7 +1409,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1451,7 +1461,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1483,7 +1493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1507,7 +1517,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "qf-vm6Wdecd6"
       },
@@ -1519,7 +1529,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
