--- a/week2_files/Basic-MT_week2_files/preprocessing_bicleaner_BPE_MTMA2025s_v2.ipynb
+++ b/week2_files/Basic-MT_week2_files/preprocessing_bicleaner_BPE_MTMA2025s_v2.ipynb
@@ -48,7 +48,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "txAnDpS2TBzI",
-        "outputId": "24186210-2164-419e-fc38-d69e297afa04"
+        "outputId": "d291ae2e-00c0-4bad-c5b3-049b3cc3f1f2"
       },
       "outputs": [
         {
@@ -72,7 +72,7 @@
             "Get:3 http://archive.ubuntu.com/ubuntu jammy/main amd64 hunspell-en-us all 1:2020.12.07-2 [280 kB]\n",
             "Get:4 http://archive.ubuntu.com/ubuntu jammy/main amd64 libhunspell-1.7-0 amd64 1.7.0-4build1 [175 kB]\n",
             "Get:5 http://archive.ubuntu.com/ubuntu jammy/main amd64 libhunspell-dev amd64 1.7.0-4build1 [241 kB]\n",
-            "Fetched 896 kB in 2s (480 kB/s)\n",
+            "Fetched 896 kB in 0s (3,257 kB/s)\n",
             "Preconfiguring packages ...\n",
             "Selecting previously unselected package libtext-iconv-perl.\n",
             "(Reading database ... 125044 files and directories currently installed.)\n",
@@ -142,7 +142,7 @@
             "Need to get 286 kB of archives.\n",
             "After this operation, 1,176 kB of additional disk space will be used.\n",
             "Get:1 http://archive.ubuntu.com/ubuntu jammy/main amd64 hunspell-de-de all 20161207-9 [286 kB]\n",
-            "Fetched 286 kB in 2s (171 kB/s)\n",
+            "Fetched 286 kB in 0s (1,666 kB/s)\n",
             "Selecting previously unselected package hunspell-de-de.\n",
             "(Reading database ... 125155 files and directories currently installed.)\n",
             "Preparing to unpack .../hunspell-de-de_20161207-9_all.deb ...\n",
@@ -154,7 +154,7 @@
             "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Building wheels for collected packages: hunspell\n",
             "  Building wheel for hunspell (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for hunspell: filename=hunspell-0.5.5-cp311-cp311-linux_x86_64.whl size=66312 sha256=3f892ea64d9ab4137b527104040b03f881bd3f0d46a0f293b09d88f27a4e84aa\n",
+            "  Created wheel for hunspell: filename=hunspell-0.5.5-cp311-cp311-linux_x86_64.whl size=66314 sha256=f5c393052ecc06d1a3e7ab9a314153e677587fdb9d1d135fddc1523598af58bb\n",
             "  Stored in directory: /root/.cache/pip/wheels/0b/41/b3/14ebfe8dfb3116e3f1ab55ff0db766d1ef033b6842ccc67e24\n",
             "Successfully built hunspell\n",
             "Installing collected packages: hunspell\n",
@@ -179,7 +179,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l0tT7uz7N37c",
-        "outputId": "bb53fb0f-1d2a-4d04-9db8-6a58614eb20b"
+        "outputId": "0fa67556-daeb-4309-daa2-488bd511f0e0"
       },
       "outputs": [
         {
@@ -187,15 +187,15 @@
           "name": "stdout",
           "text": [
             "Collecting https://github.com/kpu/kenlm/archive/master.zip\n",
-            "  Downloading https://github.com/kpu/kenlm/archive/master.zip (553 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m553.6/553.6 kB\u001b[0m \u001b[31m2.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "  Downloading https://github.com/kpu/kenlm/archive/master.zip\n",
+            "\u001b[2K     \u001b[32m\\\u001b[0m \u001b[32m553.6 kB\u001b[0m \u001b[31m8.3 MB/s\u001b[0m \u001b[33m0:00:00\u001b[0m\n",
             "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
             "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
             "Building wheels for collected packages: kenlm\n",
             "  Building wheel for kenlm (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for kenlm: filename=kenlm-0.2.0-cp311-cp311-linux_x86_64.whl size=3187002 sha256=3291eb21f6148b592817c8ef1bd01e87dcae782095b2ec4229af33c228c4c638\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-2q69_c78/wheels/4e/ca/6a/e5da175b1396483f6f410cdb4cfe8bc8fa5e12088e91d60413\n",
+            "  Created wheel for kenlm: filename=kenlm-0.2.0-cp311-cp311-linux_x86_64.whl size=3186999 sha256=f2f7ded95b00701f6506e0e8e45dd55219ad2471d7668051a566fea88edc2159\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-jxp_3_20/wheels/4e/ca/6a/e5da175b1396483f6f410cdb4cfe8bc8fa5e12088e91d60413\n",
             "Successfully built kenlm\n",
             "Installing collected packages: kenlm\n",
             "Successfully installed kenlm-0.2.0\n"
@@ -218,7 +218,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tOCvx9Csn2f5",
-        "outputId": "16804972-aba9-47a7-98f7-395eb7f9e739"
+        "outputId": "bdaad531-0a0e-4736-b3cd-d4d79b6b4772"
       },
       "execution_count": 3,
       "outputs": [
@@ -835,17 +835,16 @@
       "cell_type": "code",
       "source": [
         "#clone repo from Github and navigate to correct working directory\n",
-        "!git clone https://github.com/fubotz/BMT_2025S\n",
-        "%cd BMT_2025S/week2_files/Basic-MT_week2_files"
+        "!git clone https://github.com/fubotz/BMT_2025S"
       ],
       "metadata": {
         "id": "_k9e03SwSNYC",
-        "outputId": "f913773e-bafb-4782-b99a-52307382e446",
+        "outputId": "7da1bd23-62ff-46d4-d192-1cea1db89e09",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -859,23 +858,33 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "%cd BMT_2025S/week2_files/Basic-MT_week2_files"
+      ],
+      "metadata": {
+        "id": "5f0P4soMYYrU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hcMRjnkjPQ3C",
-        "outputId": "1dfdc8dc-da13-4e8c-db11-bc9b9c5ec326"
+        "outputId": "43b2416f-2b77-4532-c896-f68a3f22d72f"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "   500 dev.en-de\n",
             "   500 dev.en-de.de\n",
             "   500 dev.en-de.en\n",
-            "  1500 total\n"
+            "  1000 total\n"
           ]
         }
       ],
@@ -905,7 +914,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JnluwFfdSwpl",
-        "outputId": "66750592-45ba-4c0c-b285-08f0b5a2c107"
+        "outputId": "5c62468d-0957-41bf-bc35-d60ce6a1a347"
       },
       "outputs": [
         {
@@ -940,22 +949,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KmsuSkv8deFa",
-        "outputId": "d636cbb6-e6ec-4cfc-ec14-56d0b129f6aa"
+        "outputId": "5141daa0-f8be-4280-9938-967abbba1a27"
       },
-      "execution_count": 8,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Collecting cyhunspell\n",
-            "  Downloading CyHunspell-1.3.4.tar.gz (2.7 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.7/2.7 MB\u001b[0m \u001b[31m7.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Using cached CyHunspell-1.3.4.tar.gz (2.7 MB)\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Collecting cacheman>=2.0.6 (from cyhunspell)\n",
-            "  Downloading CacheMan-2.2.0-py2.py3-none-any.whl.metadata (5.8 kB)\n",
+            "  Using cached CacheMan-2.2.0-py2.py3-none-any.whl.metadata (5.8 kB)\n",
             "Requirement already satisfied: psutil>=2.1.0 in /usr/local/lib/python3.11/dist-packages (from cacheman>=2.0.6->cyhunspell) (5.9.5)\n",
-            "Downloading CacheMan-2.2.0-py2.py3-none-any.whl (13 kB)\n",
+            "Using cached CacheMan-2.2.0-py2.py3-none-any.whl (13 kB)\n",
             "Building wheels for collected packages: cyhunspell\n",
             "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
             "  \n",
@@ -984,9 +992,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JhgrF-QnejwS",
-        "outputId": "18a44013-518c-48cd-98de-ffddd92b7680"
+        "outputId": "ea3b632a-8252-4396-9054-f55eba39e65b"
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -1007,9 +1015,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JX1CGcMjSnb6",
-        "outputId": "b84b4cc3-1313-4249-ef75-5c9364a13883"
+        "outputId": "b84271cd-acdd-4f26-ebdc-ae7e2aa2d573"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1026,13 +1034,13 @@
             "Requirement already satisfied: joblib in /usr/local/lib/python3.11/dist-packages (from bicleaner-hardrules) (1.4.2)\n",
             "Collecting sacremoses==0.0.53 (from bicleaner-hardrules)\n",
             "  Downloading sacremoses-0.0.53.tar.gz (880 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m880.6/880.6 kB\u001b[0m \u001b[31m11.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m880.6/880.6 kB\u001b[0m \u001b[31m10.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Collecting fasttext-wheel==0.9.2 (from bicleaner-hardrules)\n",
             "  Downloading fasttext_wheel-0.9.2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (16 kB)\n",
             "Collecting fastspell==0.11.1 (from bicleaner-hardrules)\n",
             "  Downloading fastspell-0.11.1-py3-none-any.whl.metadata (53 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m53.6/53.6 kB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m53.6/53.6 kB\u001b[0m \u001b[31m3.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting huggingface-hub<0.23,>=0.15 (from bicleaner-hardrules)\n",
             "  Downloading huggingface_hub-0.22.2-py3-none-any.whl.metadata (12 kB)\n",
             "INFO: pip is looking at multiple versions of fastspell to determine which version is compatible with other requirements. This could take a while.\n",
@@ -1063,13 +1071,13 @@
             "  Downloading bicleaner_hardrules-2.8.0-py3-none-manylinux_2_5_x86_64.manylinux1_x86_64.whl.metadata (13 kB)\n",
             "Collecting fasttext==0.9.2 (from bicleaner-hardrules)\n",
             "  Downloading fasttext-0.9.2.tar.gz (68 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m68.8/68.8 kB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m68.8/68.8 kB\u001b[0m \u001b[31m5.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Collecting fastspell==0.8 (from bicleaner-hardrules)\n",
             "  Downloading fastspell-0.8.0-py3-none-any.whl.metadata (10 kB)\n",
             "Collecting fastspell-dictionaries==3.0 (from fastspell==0.8->bicleaner-hardrules)\n",
             "  Downloading fastspell-dictionaries-3.0.tar.gz (19.2 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m19.2/19.2 MB\u001b[0m \u001b[31m81.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m19.2/19.2 MB\u001b[0m \u001b[31m60.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
             "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
@@ -1086,25 +1094,13 @@
             "Requirement already satisfied: packaging in /usr/local/lib/python3.11/dist-packages (from pytest->bicleaner-hardrules) (24.2)\n",
             "Requirement already satisfied: pluggy<2,>=1.5 in /usr/local/lib/python3.11/dist-packages (from pytest->bicleaner-hardrules) (1.5.0)\n",
             "Downloading bicleaner_hardrules-2.8.0-py3-none-manylinux_2_5_x86_64.manylinux1_x86_64.whl (13.5 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.5/13.5 MB\u001b[0m \u001b[31m6.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.5/13.5 MB\u001b[0m \u001b[31m12.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading fastspell-0.8.0-py3-none-any.whl (13 kB)\n",
             "Using cached pybind11-2.13.6-py3-none-any.whl (243 kB)\n",
             "Building wheels for collected packages: fasttext, sacremoses, fastspell-dictionaries, toolwrapper\n",
             "  Building wheel for fasttext (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for fasttext: filename=fasttext-0.9.2-cp311-cp311-linux_x86_64.whl size=4304104 sha256=e09bac4fd8e4ce6885ecdc464a3d4eea46f5ee28bd8c1d7a5dd886c86201676f\n",
-            "  Stored in directory: /root/.cache/pip/wheels/12/89/c9/c932d04c4dd65abe347bbb3e6f7668688753cbc585305ad8b7\n",
-            "  Building wheel for sacremoses (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for sacremoses: filename=sacremoses-0.0.53-py3-none-any.whl size=895241 sha256=e7367045de9267987b093496d67496f39bf89bcac3305e83102ca21e415870a8\n",
-            "  Stored in directory: /root/.cache/pip/wheels/11/75/c6/a82d827a00df823caf211262900d2c024f5b3a775b82b45230\n",
-            "  Building wheel for fastspell-dictionaries (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for fastspell-dictionaries: filename=fastspell_dictionaries-3.0-py3-none-any.whl size=19292612 sha256=32909922b6b12df55ab9c5fefd1f568024b2867ebad842a67c476a2cd0015567\n",
-            "  Stored in directory: /root/.cache/pip/wheels/e4/ad/3c/de089aa637e81883e83a41eed43f9426514fdb51d6c554bcb9\n",
-            "  Building wheel for toolwrapper (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for toolwrapper: filename=toolwrapper-2.1.0-py3-none-any.whl size=3338 sha256=7b4b948f9ca09b4a014cd555e891ebb04c7fa243c2630e4cb70eff8090006983\n",
-            "  Stored in directory: /root/.cache/pip/wheels/28/b0/06/bccd361b5b8bbf1ec88b72164fa52daaaa2221865fb980dff1\n",
-            "Successfully built fasttext sacremoses fastspell-dictionaries toolwrapper\n",
-            "Installing collected packages: toolwrapper, sacremoses, pybind11, fastspell-dictionaries, fasttext, fastspell, bicleaner-hardrules\n",
-            "Successfully installed bicleaner-hardrules-2.8.0 fastspell-0.8.0 fastspell-dictionaries-3.0 fasttext-0.9.2 pybind11-2.13.6 sacremoses-0.0.53 toolwrapper-2.1.0\n"
+            "  Created wheel for fasttext: filename=fasttext-0.9.2-cp311-cp311-linux_x86_64.whl size=4304106 sha256=c96389f8cc0013e7fde5cd23d65a490ac3a8fe0a3222fc78b113c32dd1863ad5\n",
+            "  Stored in directory: /root/.cache/pip/wheels/12/89/c9/c932d04c4dd65abe347bbb3e6f7668688753cbc585305ad8b7\n"
           ]
         }
       ]
